# MouthScan

./: app.py  auth.py  models.py  pyproject.toml
static/: manifest.json  service-worker.js
static/css/: style.css
static/js/: camera.js  main.js
templates/: analysis.html  base.html  dashboard.html  history.html  index.html  login.html  register.html
utils/: ai_analyzer.py
